# phi-4

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: action.hpp  lattice.hpp  metropolisHastingsMonteCarlo.hpp  observable.hpp  randomUtils.hpp
src/: action.cpp  lattice.cpp  main.cpp  metropolisHastingsMonteCarlo.cpp
tests/: lattice_test.cpp
